@@ -1125,4 +1125,9 @@ November 30-?? 2011
 	Root histogram classes. 
 	* Modify template class CGammaSummarySpectrum to use Root
 	histogram classes.
-	* Slide a TH1I under the hood of CSpectrumS (strip chart spectrum).
+	* Slide a TH1I under the hood of CSpectrumS (strip chart
+	spectrum).
+	* Slide a TH2C under the hood of CSummarySpectrumB (byte summary
+	spectrum).
+	* Fix free errors on exit.
+	
